# fast_api_project_template

./: Dockerfile  Makefile  docker-compose.yml  pyproject.toml
cd/: feature-branch-deployer.sh  feature-branch-deployment.yaml
ci/: check.yaml
environment/: .env  .env.ENVIRONMENT
kubernetes/base/: configuration_map.yaml  deployment.yaml  kustomization.yaml  service.yaml
kubernetes/feature-branch/: feature-branch-configuration_map.yaml  feature-branch-deployment.yaml  feature-branch-service.yaml
kubernetes/overlays/ENVIRONMENT/: deployment.yaml  kustomization.yaml
src/: main.py
src/clients/gcp_client/: secret_manager_client.py
src/config/: config_map_loader.py  environment_loader.py  logging_configurator.py  problem_configurator.py
src/endpoints/: generic_endpoint.py  liveness_endpoint.py  readiness_endpoint.py
src/helpers/: documentation.py  error_details.py
src/middleware/: error_middleware.py  http_logging_middleware.py  kill_switch_middleware.py  traceability_middleware.py
src/model/problem/: error.py  exception.py  response.py  schema.py
src/model/request_model/: request.py
tests/: helpers.py
tests/integration/: conftest.py  test_docs_endpoint.py  test_generic_endpoint.py  test_killswitch_endpoint.py  test_liveness_endpoint.py  test_metrics_endpoint.py  test_readiness_endpoint.py  utils.py
tests/unit/: conftest.py  test_environment_loader.py
tests/unit/gcp_client/: secret_manager_loader_client.py
